testdata/baselines/reference/submodule/compiler/unusedImports15.errors.txt
foo.tsx(1,8): error TS6133: 'Element' is declared but its value is never read.


==== foo.tsx (1 errors) ====
    import Element = require("react");
           ~~~~~~~
!!! error TS6133: 'Element' is declared but its value is never read.
    
    export const FooComponent = <div></div>
    
==== node_modules/@types/react/index.d.ts (0 errors) ====
    export = React;
    export as namespace React;
    
    declare namespace React {
        function createClass<P, S>(spec);
    }
    declare global {
        namespace JSX {
        }
    }
    
    
    